--- a/app/components/soat/soats.css
+++ b/app/components/soat/soats.css
@@ -4,4 +4,10 @@
 		font-size: 12px;
 		color: #146B00;
 	}
+
+	& .message-invalid-date {
+		color: red;
+		font-weight: bold;
+		font-size: 12px;
+	}
 }
